--- a/style.css
+++ b/style.css
@@ -1,9 +1,141 @@
-.header{
-  background-color: #CCCCFF;
-  color: white;
-  height: 200px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-.header-text{
-  padding: 10px 20px;
+/*----------------header----------------*/
+
+.header{
+  background-color: rgba(204,204,255, 0.7);
+  height: 80px;
+  color: white;
+  line-height: 80px;
+
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.header-wrapper{
+  width: 85%;
+  margin: 0 auto;
+}
+
+.header-logo{
+  font-weight: bold;
+  font-size: 25px;
+  float: left;
+}
+
+.header h3{
+  float: right;
+  font-weight: normal;
+}
+
+
+/*----------------main----------------*/
+
+
+.main-wrapper{
+  width: 85%;
+  margin: 0 auto;
+  height: 1000px;
+}
+
+.main{
+  background-color: #f7f7f7;
+  text-align: center;
+  padding-top: 70px;
+}
+
+.main h1{
+  padding-top: 40px;
+  color: #766b80;
+  opacity: 0.8;
+  border-bottom: 1.5px solid #b3aeb5;
+}
+
+.board-wrapper{
+  margin-top: 50px;
+  height: 520px;
+}
+
+.board-left-wrapper{
+  float: left;
+  width: 60%;
+}
+
+.board-right-wrapper{
+  float: left;
+  width: 40%;
+}
+
+.board-left{
+  height: 500px;
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.board-left p{
+  opacity: 0.5;
+}
+
+.board-right{
+  padding: 25px 0 30px;
+  color: #766b80;
+  background-color: #e9e7e7;
+  border-radius: 8px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+input, textarea{
+  margin: 10px 0 10px;
+  font-size: 15px;
+  width: 80%;
+  border: none;
+}
+
+input{
+  height: 50px;
+  padding: 0 5px;
+}
+
+textarea{
+  padding: 5px;
+  height: 100px;
+}
+
+.submit-btn{
+  opacity: 0.6;
+  background-color: #c4bfbf;
+  color: #766b80;
+}
+
+.submit-btn:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+
+
+/*----------------footer----------------*/
+
+
+.footer{
+  background-color: #63638c;
+  height: 60px;
+}
+
+.footerr-wrapper{
+  width: 85%;
+  margin: 0 auto;
+}
+
+.footer-logo{
+  font-size: 15px;
+  color: white;
+  text-align: center;
+  line-height: 60px;
 }
